--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,15 @@
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>This is FRONTEND</title>
+	<title>This is FRONTEND ha</title>
+	<style>
+		#root {
+			width: 200px;
+			height: 200px;
+			background-color: cornflowerblue;
+		}
+	</style>
+	<script src="script.js"></script>
 </head>
 <body>
 	<div id="root"></div>
